--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 <div class="question">
   <label>Gender</label>
   <div class="genders">
-    <label><input type="radio" name="gender" value="male"> Male</label>
-    <label><input type="radio" name="gender" value="female"> Female</label>
-    <label><input type="radio" name="gender" value="na"> N/A</label>
+    <label><input type="checkbox" name="gender" value="male"> Male</label>
+    <label><input type="checkbox" name="gender" value="female"> Female</label>
+    <label><input type="checkbox" name="gender" value="na"> N/A</label>
   </div>
 </div>
 <div class="question">
